# IOCParser

./: CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  QUALITY.md  README.md  build_package.py  iocparser-cli  iocparser.py  pyproject.toml  requirements.txt  setup.py  setup_quality.sh  tox.ini
.github/workflows/: ci.yml
examples/: README.md  sample_report.txt
iocparser/: README.md  __init__.py  __main__.py  core.py  main.py
iocparser/modules/: __init__.py  config.py  exceptions.py  extractor.py  extractor_aggregate.py  extractor_artifacts.py  extractor_base.py  extractor_hashes.py  extractor_network.py  extractor_patterns.py  file_parser.py  logger.py  output_formatter.py  persistence.py  streaming.py  utils.py  warninglists.py  warninglists_diagnostics.py
modules/: __init__.py  extractor.py  file_parser.py  output_formatter.py  warninglists.py
modules/data/: misp_warninglists_metadata.json
stubs/: stix2.pyi
stubs/sqlalchemy/: __init__.pyi  orm.pyi
tests/: __init__.py  test_basic.py  test_config.py  test_duplicate_removal.py  test_duplicate_removal_simple.py  test_exceptions.py  test_extractors.py  test_file_parser.py  test_init.py  test_logger.py  test_main.py  test_output_formatter.py  test_performance.py  test_persistence.py  test_streaming.py  test_utils.py  test_warninglists.py
