[build-system]
requires = ["setuptools>=80.9.0", "wheel>=0.45.1", "setuptools-scm[toml]>=9.2.2"]
build-backend = "setuptools.build_meta"

[project]
name = "iocparser-tool"
version = "5.0.0"
description = "A tool for extracting Indicators of Compromise from security reports"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Marc Rivero"}
]
maintainers = [
    {name = "Marc Rivero"}
]
keywords = ["security", "ioc", "malware", "threat-intelligence", "pdf", "html", "parser"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Filters",
]
requires-python = ">=3.10"
dependencies = [
    "colorama>=0.4.6",
    "python-magic>=0.4.27",
    "requests>=2.32.5",
    "urllib3>=2.6.3",
    "tqdm>=4.67.1",
    "pdfplumber>=0.11.9",
    "beautifulsoup4>=4.14.3",
    "lxml>=6.0.2",
    "regex>=2025.11.3",
    "pdfminer.six>=20251230",
    "stix2>=3.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-benchmark>=5.2.3",
    "ruff>=0.14.11",
    "mypy>=1.19.1",
    "bandit[toml]>=1.9.2",
    "pylint>=4.0.4",
    "pre-commit>=4.5.1",
    "types-requests>=2.32.4.20260107",
    "types-setuptools>=80.9.0.20250822",
    "types-colorama>=0.4.15.20250801",
    "types-tqdm>=4.67.0.20250809",
]

[project.urls]
Homepage = "https://github.com/seifreed/iocparser"
Documentation = "https://github.com/seifreed/iocparser#readme"
Repository = "https://github.com/seifreed/iocparser"
"Bug Tracker" = "https://github.com/seifreed/iocparser/issues"

[project.scripts]
iocparser = "iocparser.main:main"

[tool.setuptools.packages.find]
include = ["iocparser*"]

[tool.setuptools.package-data]
iocparser = ["modules/data/*.json"]

# Ruff configuration
[tool.ruff]
target-version = "py310"
line-length = 100
fix = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ARG",  # flake8-unused-arguments
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "DTZ",  # flake8-datetimez
    "RUF",  # Ruff-specific rules
    "N",    # pep8-naming
    "S",    # flake8-bandit
    "A",    # flake8-builtins
    "COM",  # flake8-commas
    "PTH",  # flake8-use-pathlib
    "ERA",  # eradicate
    "PD",   # pandas-vet
    "PGH",  # pygrep-hooks
    "PL",   # Pylint
    "TRY",  # tryceratops
    "FLY",  # flynt
    "PERF", # Perflint
    "LOG",  # flake8-logging
    "RET",  # flake8-return
    "SLF",  # flake8-self
    "SLOT", # flake8-slots
    "RSE",  # flake8-raise
    "PIE",  # flake8-pie
    "PT",   # flake8-pytest-style
    "INT",  # flake8-gettext
    "TID",  # flake8-tidy-imports
]
ignore = [
    "COM812",  # Conflicts with ruff formatter
    "E501",    # Line too long (regex patterns)
    "PLR0912", # Too many branches (complex validation logic)
    "PLR0911", # Too many return statements
    "PLR2004", # Magic value in comparison
    "PGH003",  # Use specific rule codes with type: ignore
    "PLC0415", # Import not at top level (used for lazy imports)
    "SIM103",  # Return condition directly
    "SIM102",  # Nested if statements (sometimes clearer for readability)
    "TC001",   # Move import into type-checking block
    "TC002",   # Move third-party import into type-checking block
    "TC003",   # Move standard library import into type-checking block
    "UP007",   # Use X | Y for type annotations (keep Union for compatibility)
    "ARG002",  # Unused method argument
    "TRY300",  # Consider moving to else block
    "B019",    # lru_cache on methods (intentional for performance)
    "B005",    # Using .strip() with multi-char strings (intentional)
    "PERF401", # List comprehension (explicit loop is clearer for complex logic)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "PLR2004", "S311"]
"examples/*" = ["INP001"]

[tool.ruff.lint.isort]
known-first-party = ["iocparser"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pep8-naming]
classmethod-decorators = ["classmethod", "pydantic.validator"]

[tool.ruff.lint.pylint]
max-args = 7
max-branches = 15
max-returns = 6
max-statements = 50

# MyPy configuration
[tool.mypy]
python_version = "3.10"
# MAXIMUM STRICTNESS - TRUE 100% COMPLIANCE
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_any_generics = true
disallow_any_unimported = true
disallow_any_expr = true
disallow_any_decorated = true
disallow_any_explicit = true
disallow_subclassing_any = true
ignore_missing_imports = false
follow_imports = "normal"
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
warn_no_return = true
strict_equality = true
strict_optional = true
pretty = true
show_error_context = true
show_error_codes = true
show_traceback = true
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "colorama.*",
    "tqdm.*",
    "pdfplumber.*",
    "magic.*",
    "regex.*",
    "pdfminer.*",
    "requests.*",
    "bs4.*",
]
ignore_missing_imports = true

# Bandit configuration
[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv", "build", "dist"]
skips = []  # NO SKIPS - TRUE 100% COMPLIANCE

[tool.bandit.assert_used]
skips = ["*/test_*.py", "*/tests/*.py"]

# Pylint configuration
[tool.pylint.main]
py-version = "3.10"
jobs = 0
max-line-length = 100
disable = [
    "C0114",  # missing-module-docstring
    "C0115",  # missing-class-docstring
    "C0116",  # missing-function-docstring
    "R0903",  # too-few-public-methods
    "R0913",  # too-many-arguments
    "W0511",  # fixme
    "C0103",  # invalid-name
]
good-names = ["i", "j", "k", "f", "e", "v", "ip", "id", "_"]
min-public-methods = 0
max-args = 7

[tool.pylint.design]
max-branches = 15
max-statements = 50

[tool.pylint.similarities]
min-similarity-lines = 10
ignore-comments = true
ignore-docstrings = true

# Coverage configuration
[tool.coverage.run]
source = ["iocparser"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
precision = 2
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "benchmark: marks tests as benchmark tests",
]

# isort configuration (for compatibility if not using ruff)
[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["iocparser"]
skip = ["venv", ".venv", "build", "dist"]

# Black configuration (for compatibility if not using ruff format)
[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312', 'py313']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.tox
  | \.venv
  | venv
  | build
  | dist
  | __pycache__
)/
'''
